--- a/themes/pagedjs/layouts/_default/list.html
+++ b/themes/pagedjs/layouts/_default/list.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <main class="list">
     {{ partial "cropmarks.html" . }}
-    <article class="{{ .Page.Section }}">
+    <article>
         {{ partial "running-head" . }}
         
         {{/*  {{ partial "breadcrumb.html" . }} */}}
