--- a/themes/pagedjs/assets/css/base/layout.css
+++ b/themes/pagedjs/assets/css/base/layout.css
@@ -20,7 +20,7 @@ body {
   padding: 0em;
   background: var(--color-background);
   margin: 0;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 main {
@@ -39,21 +39,13 @@ main {
   transform: rotate(0deg);
   grid-column-start: start;
   grid-column-end: end;
-  width: 90%;
+  width: 100%;
   justify-self: center;
-  margin: 10em auto;
+  margin: 3em auto;
 
   position: relative;
 
-  header {
-    padding-bottom: 1.5em;
-    /* margin-top: -4em;
-    padding-top: 4em;
-    margin-left: -4em;
-    margin-right: -4em;
-    padding-left: 4em;
-    padding-right: 4em; */
-  }
+
 }
 
 article {
@@ -62,25 +54,10 @@ article {
   border: 10px solid var(--color-paper);
   margin: 0;
   position: relative;
-  padding: 2.5em;
+  padding: 2em;
   padding-bottom: 4em;
 
-  header {
-    grid-column: left/end; 
-    #title {
-        position: relative;
-        &::after {
-            content: " ";
-            width: 100%;
-            height: 1em;
-            display: block;
-            position: absolute;
-            border-bottom: 5px dotted var(--color-primary);
-            opacity: 0.3;
-            bottom: 0;
-        }
-    }
-  }
+ 
   
 }
 
@@ -125,70 +102,7 @@ article {
 
 /* mobile */
 
-@media screen and (max-width: 1000px) {
-  body {
-    display: block;
 
-    .crop-marks {
-      display: none;
-    }
-
-    main {
-      margin: 0 auto;
-      margin-bottom: 2em;
-      padding: 0;
-      margin-top: 3em;
-
-      article {
-        padding: 0;
-      }
-    }
-
-    footer {
-      text-align: center;
-      margin-top: 8em;
-      max-width: 40%;
-    }
-
-    .menu {
-      /* bottom: 0;
-      left: 10%; */
-      width: 80%;
-    }
-
-    .menu::before {
-      content: " ";
-      width: 80vw;
-    }
-
-    button.menuToggle {
-      width: 89px;
-      height: 89px;
-      left: 8px;
-      top: 10px;
-      background: var(--color-paper);
-      /* box-shadow: 0 0 2px 0 var(--color-primary); */
-      svg path {
-        /* fill: white; */
-      }
-      position: fixed;
-      /* box-shadow: -5px 5px 5px 0 rgba(100,100,100,0.5); */
-    }
-
-    .menu {
-      /* position: absolute; */
-      /* bottom: 0;
-      top: 0;
-      display: flex; */
-      width: 80%;
-      transition: left 1s;
-    }
-
-    .menu.leftHide {
-      left: -100%;
-    }
-  }
-}
 
 .paginator {
   border-top: 1px solid grey;
