--- a/themes/pagedjs/assets/css/page/posts.css
+++ b/themes/pagedjs/assets/css/page/posts.css
@@ -4,5 +4,13 @@
   --saturation: 50%;
   --color-primary: hsl(var(--tint), var(--light), var(--saturation));
   --color-accent: var(--color-primary); */
+
+  article {
+    min-height: 860px
+  }
+
+  .article h2 {
+    border-color: transparent;
+  }
 }
 
