--- a/themes/pagedjs/layouts/partials/footer.html
+++ b/themes/pagedjs/layouts/partials/footer.html
@@ -1,6 +1,8 @@
 <footer>
     <!-- <div class="postit"> -->
-        <p class="foot-content">Paged.js is maintained by the nice folks of the</p>
-        <a href="https://www.cabbagetreelabs.org" class="footer-logo">{{ partial "ctl-logo.html" }}</a></p>
+        <p class="foot-content">Paged.js is maintained by the nice folks of the 
+        <a href="https://www.cabbagetreelabs.org" class="footer-logo">Cabbage Tree Labs</a></p>
+
+            {{/*  {{ partial "ctl-logo.html" }}  */}}
     <!-- </div> -->
 </footer>
