--- a/themes/pagedjs/assets/css/page/list.css
+++ b/themes/pagedjs/assets/css/page/list.css
@@ -92,7 +92,7 @@
 
       a {
         counter-increment: doc;
-        background: white;
+        background: var(--color-paper);
         position: relative;
         z-index: 100;
         padding-right: 0.5ch;
