--- a/themes/pagedjs/assets/css/page/homepage.css
+++ b/themes/pagedjs/assets/css/page/homepage.css
@@ -32,8 +32,7 @@
     margin-bottom: 0px;
     max-width: 40ch;
     margin-bottom: 1em;
-    text-align: justify;
-    hyphens: auto;
+    text-align: center;
   }
 }
 
