--- a/themes/pagedjs/layouts/shortcodes/signature.html
+++ b/themes/pagedjs/layouts/shortcodes/signature.html
@@ -4,7 +4,7 @@
          src="{{ . }}" {{ end }}
         {{with .Get "name" }} alt="portrait of {{.}}, author of the article" {{end}} />
     {{ end}}
-    <p class="name">This post was written by {{ .Get "name" }}.</p>
+    <p class="name">This post was written by {{ .Get "name" }}</p>
     {{ .Inner | markdownify }}
 </div>
             
