--- a/themes/pagedjs/assets/css/base/type.css
+++ b/themes/pagedjs/assets/css/base/type.css
@@ -67,7 +67,7 @@ article {
   blockquote {
     /* padding-left: 1em; */
     /* margin-left: 0; */
-    font-size: 0.95em;
+    font-size: 0.9em;
     width: auto;
     padding: 0.5em 1em 1em;
     /* margin-left: 4ch; */
@@ -76,21 +76,21 @@ article {
     /* border-left: 0.5ch solid lightgrey; */
 
     position: relative;
+
     &::before {
       content: "「";
       position: absolute;
       font-size: 1em;
-      color:
-      grey;
+      color: grey;
       top: 0;
       left: -1ch;
     }
+
     &::after {
       content: "」";
       position: absolute;
       font-size: 1em;
-      color:
-      grey;
+      color: grey;
       bottom: 0;
       right: -1ch;
     }
@@ -153,7 +153,6 @@ article {
 
   h3 {
     font-size: 1.375em;
-
   }
 
   h4 {
@@ -180,7 +179,7 @@ article {
   .highlight {
     margin: 2em 0 3em 0;
 
-     + .highlight {
+    + .highlight {
       margin-top: -2em;
     }
   }
@@ -199,8 +198,6 @@ article {
     & + pre {
     }
   }
-
-
 
   code {
     font-size: .70em;
@@ -239,10 +236,13 @@ article {
   /* figure */
   figure {
     margin: 2em 0em;
-  }
-  /* picture */
-  img {
-    max-width: 100%;
+    display: flex;
+    /* picture */
+    img {
+      max-width: 100%;
+      max-height: 30em;
+      margin: 0 auto;
+    }
   }
 
 
@@ -283,10 +283,10 @@ article {
     margin-bottom: 6em;
     position: relative;
     z-index: 2;
-    grid-column: left/end; 
+    grid-column: left/end;
     font-size: 0.8em;
     margin-top: 6em;
-    margin-bottom: 2em;   
+    margin-bottom: 2em;
     /* font-weight: 700; */
     &::before {
       content: " ";
@@ -310,15 +310,16 @@ article {
       position: relative;
       text-shadow: 1px 1px var(--color-paper), -1px 1px var(--color-paper), -1px -1px var(--color-paper), 1px -1px var(--color-paper), 2px 2px var(--color-paper), -2px 2px var(--color-paper), -2px -2px var(--color-paper), 2px -2px var(--color-paper), 3px 3px var(--color-paper), -3px 3px var(--color-paper), -3px -3px var(--color-paper), 3px -3px var(--color-paper), 4px 4px var(--color-paper), -4px 4px var(--color-paper), -4px -4px var(--color-paper), 4px -4px var(--color-paper);
       border: 0px solid transparent;
+
       &::after {
-          content: " ";
-          width: 100%;
-          height: 1em;
-          display: block;
-          position: absolute;
-          border-bottom: 2px dotted var(--color-primary);
-          opacity: 0.3;
-          bottom: 0;
+        content: " ";
+        width: 100%;
+        height: 1em;
+        display: block;
+        position: absolute;
+        border-bottom: 2px dotted var(--color-primary);
+        opacity: 0.3;
+        bottom: 0;
       }
     }
 
@@ -329,15 +330,15 @@ article {
       max-width: 50ch;
       margin-top: 2em;
       color: var(--color-primary);
-    padding-left: 1em;
-    border-left: 2px solid currentcolor;
+      padding-left: 1em;
+      border-left: 2px solid currentcolor;
       max-width: 51ch;
-display: block;
-margin-top: 2em;
-margin-bottom: 3em;
-text-shadow: 1px 1px var(--color-paper), -1px 1px var(--color-paper), -1px -1px var(--color-paper), 1px -1px var(--color-paper), 2px 2px var(--color-paper), -2px 2px var(--color-paper), -2px -2px var(--color-paper), 2px -2px var(--color-paper), 3px 3px var(--color-paper), -3px 3px var(--color-paper), -3px -3px var(--color-paper), 3px -3px var(--color-paper), 4px 4px var(--color-paper), -4px 4px var(--color-paper), -4px -4px var(--color-paper), 4px -4px var(--color-paper);
-
+      display: block;
+      margin-top: 2em;
+      margin-bottom: 3em;
+      text-shadow: 1px 1px var(--color-paper), -1px 1px var(--color-paper), -1px -1px var(--color-paper), 1px -1px var(--color-paper), 2px 2px var(--color-paper), -2px 2px var(--color-paper), -2px -2px var(--color-paper), 2px -2px var(--color-paper), 3px 3px var(--color-paper), -3px 3px var(--color-paper), -3px -3px var(--color-paper), 3px -3px var(--color-paper), 4px 4px var(--color-paper), -4px 4px var(--color-paper), -4px -4px var(--color-paper), 4px -4px var(--color-paper);
     }
+
     .meta {
       /* grid-column: left; */
       font-size: 0.8em;
@@ -351,6 +352,7 @@ text-shadow: 1px 1px var(--color-paper), -1px 1px var(--color-paper), -1px -1px 
         background: transparent;
       }
     }
+
     p,
     ul,
     ol,
