--- a/themes/pagedjs/assets/css/base/type.css
+++ b/themes/pagedjs/assets/css/base/type.css
@@ -124,7 +124,7 @@ article {
   h6 {
     margin: 0;
     font-weight: 400;
-    font-family: var(--font-sans);
+    font-family: var(--font-serif);
     line-height: 1.2;
     margin-top: 1.8em;
     margin-bottom: 0.5em;
