--- a/themes/pagedjs/assets/css/base/menu.css
+++ b/themes/pagedjs/assets/css/base/menu.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   position: sticky;
-  top: -4em;
+  top: 0;
   background: var(--color-paper);
   z-index: 9999999;
   align-items: flex-end;
