--- a/themes/pagedjs/assets/css/page/list.css
+++ b/themes/pagedjs/assets/css/page/list.css
@@ -72,7 +72,7 @@
     h2 {
       width: 100%;
       font-size: 1.2em;
-      font-weight: bold;
+      /* font-weight: bold; */
       margin-top: 0;
       position: relative;
       border-color: transparent;
