--- a/themes/pagedjs/assets/css/base/layout.css
+++ b/themes/pagedjs/assets/css/base/layout.css
@@ -105,7 +105,7 @@ article {
 
 
 .paginator {
-  border-top: 1px solid grey;
+  border-top: 1px solid var(--color-grey);
   margin-top: 4em;
   padding-top: 1em;
   display: flex;
