--- a/themes/pagedjs/assets/css/base/toc.css
+++ b/themes/pagedjs/assets/css/base/toc.css
@@ -16,7 +16,7 @@
     font-style: normal;
   }
   ul {
-    border-left: 1px solid black;
+    border-left: 1px solid var(--color-body);
     margin-left: 3px;
     margin-top: 0;
   }
