--- a/themes/pagedjs/assets/css/base/type.css
+++ b/themes/pagedjs/assets/css/base/type.css
@@ -128,6 +128,8 @@ article {
     line-height: 1.2;
     margin-top: 1.8em;
     margin-bottom: 0.5em;
+    break-after: avoid;
+
     /* font-variant: all0s */
     &:first-child {
       margin-top: 1em;
@@ -149,6 +151,7 @@ article {
     font-size: 1.66em;
     /* padding-top: 2em; */
     border-bottom: 2px solid var(--color-lightest-grey);
+    
   }
 
   h3 {
@@ -244,7 +247,12 @@ article {
       margin: 0 auto;
     }
   }
-
+  img {
+    display: block;
+    max-width: 100%;
+    max-height: 30em;
+    margin: 0 auto;
+  }
 
   /* definition terms */
   .dt {
@@ -278,6 +286,8 @@ article {
 
 article {
   header {
+    --color-primary: var(color-body);
+    
     display: flex;
     flex-direction: column;
     margin-bottom: 6em;
@@ -304,7 +314,7 @@ article {
       margin-bottom: 0;
       font-weight: 400;
       font-style: italic;
-      color: var(--color-primary);
+      color: var(--color-body);
       font-size: 4.25em;
       font-family: var(--font-serif);
       position: relative;
@@ -329,7 +339,7 @@ article {
       line-height: 1.5;
       max-width: 50ch;
       margin-top: 2em;
-      color: var(--color-primary);
+      color: var(--color-body);
       padding-left: 1em;
       border-left: 2px solid currentcolor;
       max-width: 51ch;
