--- a/themes/pagedjs/assets/css/base/variables.css
+++ b/themes/pagedjs/assets/css/base/variables.css
@@ -6,17 +6,21 @@
   --color-background: hsl(0, 0%, 100%);
   --color-lightest-grey: rgb(245, 245, 245);
   --color-lightest-grey: hsl(var(--tint), 0%, 88%);
-  --color-primary: hsl(var(--tint),  var(--saturation), var(--light));
+  /* --color-primary: hsl(var(--tint),  var(--saturation), var(--light)); */
+
+ 
   --shadow-paper: 0 1px 1px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.12), 0 8px 8px rgba(0, 0, 0, 0.12), 0 16px 16px rgba(0, 0, 0, 0.12);
   --shadow-main: var(--shadow-paper);
   --shadow-paper: none;
 
   --shadow-main: none;
+
   --color-body: hsl(var(--tint), 0%, 23%);
   --color-link: var(--color-accent);
   --color-paper: var(--color-background);
   --color-accent: var(--color-primary);
-
+  --color-primary: var(--color-body);
+  --color-grey: currentcolor;
   /* --font-serif: "Minipax Variable", serif; */
   /* --font-serif: "Fanwood Text", serif; */
   --font-serif: "Linden Hill", serif;
