--- a/themes/pagedjs/assets/css/page/list.css
+++ b/themes/pagedjs/assets/css/page/list.css
@@ -15,7 +15,7 @@
   ul ul {
     padding-left: 3ch;
     /* margin-left: 3ch; */
-    border-left: 1px solid black;
+    border-left: 1px solid var(--color-body);
   }
 
   nav:not(".menu") > ul {
@@ -29,7 +29,7 @@
     > ul {
       padding-left: 3ch;
       margin-left: 3ch;
-      border-left: 1px solid black;
+      border-left: 1px solid var(--color-body);
     }
 
     &::before {
