--- a/themes/pagedjs/assets/css/base/layout.css
+++ b/themes/pagedjs/assets/css/base/layout.css
@@ -3,62 +3,33 @@ html {
   background-repeat: no-repeat;
   background-attachment: fixed; */
   scroll-behavior: smooth;
-
+  background: var(--color-background);
   * {
     box-sizing: border-box;
   }
 }
 
 body {
-  * {
-    box-sizing: border-box;
-  }
+
   box-sizing: border-box;
-  /* display: grid;
-  grid-template-columns: [sidebar] 15vw [start] 70vw [end] 5vw; */
+  display: grid;
+  grid-template-columns: [left] 20% [main] 60% [right] 20% [end];
+  width: 80%; 
   grid-gap: 0vw;
   padding: 0em;
   background: var(--color-background);
   margin: 0;
   /* min-height: 100vh; */
-}
-
-main {
-  &::before {
-    /* shadow for the main article */
-    position: absolute;
-    top: -2em;
-    left: -2em;
-    right: -2em;
-    bottom: -2em;
-    background: var(--color-paper, white);
-    box-shadow: var(--shadow-paper);
-    content: " ";
-    z-index: -2;
-  }
-  transform: rotate(0deg);
-  grid-column-start: start;
-  grid-column-end: end;
-  width: 100%;
-  justify-self: center;
-  margin: 3em auto;
   max-width: 1000px;
+  margin: 4em auto;
   position: relative;
-
-
+  z-index: 0;
+  /* background: red; */
+  padding: 3em;
 }
 
 article {
-  min-height: 560px;
-  background: var(--color-paper);
-  border: 10px solid var(--color-paper);
-  margin: 0;
-  position: relative;
-  padding: 2em;
-  padding-bottom: 1em;
-
- 
-  
+  grid-column: left / end;
 }
 
 .crop-marks {
@@ -68,7 +39,7 @@ article {
   right: 0;
   bottom: 0;
   z-index: -1;
-
+  
  
 }
 
@@ -97,7 +68,16 @@ article {
   bottom: 20px;
   border-width: 1px 0;
 }
+.paper {
+  background: var(--color-paper);
+  top: 2px;
+  right: 2px;
+  bottom: 2px;
+  left: 2px;
+  position: absolute;
+  z-index: 0;
 
+}
 
 
 /* mobile */
