--- a/themes/pagedjs/assets/css/base/menu.css
+++ b/themes/pagedjs/assets/css/base/menu.css
@@ -2,13 +2,16 @@
   grid-column: left/end;
   border-bottom: 1px solid var(--color-primary);
   display: flex;
+  /* margin-left: -25px;
+  margin-right: -25px;
+  padding: 0 50px; */
   justify-content: space-between;
   position: sticky;
   top: 0;
   background: var(--color-paper);
   z-index: 9999999;
   align-items: flex-end;
-  box-shadow: -16px 0px 0 var(--color-paper), 16px 0px 0 var(--color-paper), -16px -16px 0 var(--color-paper);
+  /* box-shadow: -16px 0px 0 var(--color-paper), 16px 0px 0 var(--color-paper), -16px -16px 0 var(--color-paper); */
   .baseline {
     line-height: 1;
     position: relative;
@@ -50,7 +53,7 @@
   font-family: var(--font-sans);
   text-transform: uppercase;
   font-variant: all-small-caps;
-  font-size: 1em;
+  font-size: 1.1em;
 
   ul {
     width: 100%;
