--- a/themes/pagedjs/assets/css/base/type.css
+++ b/themes/pagedjs/assets/css/base/type.css
@@ -81,7 +81,7 @@ article {
       content: "「";
       position: absolute;
       font-size: 1em;
-      color: grey;
+      color: var(--color-grey);
       top: 0;
       left: -1ch;
     }
@@ -90,7 +90,7 @@ article {
       content: "」";
       position: absolute;
       font-size: 1em;
-      color: grey;
+      color: var(--color-grey);
       bottom: 0;
       right: -1ch;
     }
@@ -151,7 +151,6 @@ article {
     font-size: 1.66em;
     /* padding-top: 2em; */
     border-bottom: 2px solid var(--color-lightest-grey);
-    
   }
 
   h3 {
@@ -247,6 +246,7 @@ article {
       margin: 0 auto;
     }
   }
+
   img {
     display: block;
     max-width: 100%;
@@ -284,97 +284,95 @@ article {
 /* headings */
 
 
-article {
-  header {
-    --color-primary: var(color-body);
-    
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 6em;
+header {
+  --color-primary: var(color-body);
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 6em;
+  position: relative;
+  z-index: 2;
+  grid-column: left/end;
+  font-size: 0.8em;
+  margin-top: 6em;
+  margin-bottom: 2em;
+  /* font-weight: 700; */
+  &::before {
+    content: " ";
+    transform: rotate(45deg);
+    border: 4px solid #eee;
+    z-index: -1;
+    width: 10em;
+    height: 10em;
+    display: block;
+    position: absolute;
+  }
+
+  #title {
+    margin-top: 0;
+    margin-bottom: 0;
+    font-weight: 400;
+    font-style: italic;
+    color: var(--color-body);
+    font-size: 4.25em;
+    font-family: var(--font-serif);
     position: relative;
-    z-index: 2;
-    grid-column: left/end;
-    font-size: 0.8em;
-    margin-top: 6em;
-    margin-bottom: 2em;
-    /* font-weight: 700; */
-    &::before {
+    text-shadow: 1px 1px var(--color-paper), -1px 1px var(--color-paper), -1px -1px var(--color-paper), 1px -1px var(--color-paper), 2px 2px var(--color-paper), -2px 2px var(--color-paper), -2px -2px var(--color-paper), 2px -2px var(--color-paper), 3px 3px var(--color-paper), -3px 3px var(--color-paper), -3px -3px var(--color-paper), 3px -3px var(--color-paper), 4px 4px var(--color-paper), -4px 4px var(--color-paper), -4px -4px var(--color-paper), 4px -4px var(--color-paper);
+    border: 0px solid transparent;
+
+    &::after {
       content: " ";
-      transform: rotate(45deg);
-      border: 4px solid #eee;
-      z-index: -1;
-      width: 10em;
-      height: 10em;
+      width: 100%;
+      height: 1em;
       display: block;
       position: absolute;
+      border-bottom: 2px dotted var(--color-primary);
+      opacity: 0.3;
+      bottom: 0;
     }
+  }
 
-    #title {
-      margin-top: 0.3em;
-      margin-bottom: 0;
+  .intro {
+    font-family: var(--font-sans);
+    font-size: 1.1em;
+    line-height: 1.5;
+    max-width: 50ch;
+    margin-top: 2em;
+    color: var(--color-body);
+    padding-left: 1em;
+    border-left: 2px solid currentcolor;
+    max-width: 51ch;
+    display: block;
+    margin-top: 2em;
+    margin-bottom: 3em;
+    text-shadow: 1px 1px var(--color-paper), -1px 1px var(--color-paper), -1px -1px var(--color-paper), 1px -1px var(--color-paper), 2px 2px var(--color-paper), -2px 2px var(--color-paper), -2px -2px var(--color-paper), 2px -2px var(--color-paper), 3px 3px var(--color-paper), -3px 3px var(--color-paper), -3px -3px var(--color-paper), 3px -3px var(--color-paper), 4px 4px var(--color-paper), -4px 4px var(--color-paper), -4px -4px var(--color-paper), 4px -4px var(--color-paper);
+  }
+
+  .meta {
+    /* grid-column: left; */
+    font-size: .8em;
+    font-family: var(--font-sans);
+    font-weight: 400;
+    margin-bottom: 0px;
+    /* border-bottom: 1px solid grey; */
+    a {
+      font-style: normal;
+      margin-left: 2ch;
       font-weight: 400;
-      font-style: italic;
-      color: var(--color-body);
-      font-size: 4.25em;
-      font-family: var(--font-serif);
-      position: relative;
-      text-shadow: 1px 1px var(--color-paper), -1px 1px var(--color-paper), -1px -1px var(--color-paper), 1px -1px var(--color-paper), 2px 2px var(--color-paper), -2px 2px var(--color-paper), -2px -2px var(--color-paper), 2px -2px var(--color-paper), 3px 3px var(--color-paper), -3px 3px var(--color-paper), -3px -3px var(--color-paper), 3px -3px var(--color-paper), 4px 4px var(--color-paper), -4px 4px var(--color-paper), -4px -4px var(--color-paper), 4px -4px var(--color-paper);
-      border: 0px solid transparent;
-
-      &::after {
-        content: " ";
-        width: 100%;
-        height: 1em;
-        display: block;
-        position: absolute;
-        border-bottom: 2px dotted var(--color-primary);
-        opacity: 0.3;
-        bottom: 0;
-      }
+      background: transparent;
     }
+  }
 
-    .intro {
-      font-family: var(--font-sans);
-      font-size: 1.1em;
-      line-height: 1.5;
-      max-width: 50ch;
-      margin-top: 2em;
-      color: var(--color-body);
-      padding-left: 1em;
-      border-left: 2px solid currentcolor;
-      max-width: 51ch;
-      display: block;
-      margin-top: 2em;
-      margin-bottom: 3em;
-      text-shadow: 1px 1px var(--color-paper), -1px 1px var(--color-paper), -1px -1px var(--color-paper), 1px -1px var(--color-paper), 2px 2px var(--color-paper), -2px 2px var(--color-paper), -2px -2px var(--color-paper), 2px -2px var(--color-paper), 3px 3px var(--color-paper), -3px 3px var(--color-paper), -3px -3px var(--color-paper), 3px -3px var(--color-paper), 4px 4px var(--color-paper), -4px 4px var(--color-paper), -4px -4px var(--color-paper), 4px -4px var(--color-paper);
-    }
+  p,
+  ul,
+  ol,
+  h2,
+  h4,
+  h5,
+  h6 {
+    margin-left: 0;
+  }
 
-    .meta {
-      /* grid-column: left; */
-      font-size: 0.8em;
-      font-family: var(--font-sans);
-      font-weight: 400;
-      /* border-bottom: 1px solid grey; */
-      a {
-        font-style: normal;
-        margin-left: 2ch;
-        font-weight: 400;
-        background: transparent;
-      }
-    }
-
-    p,
-    ul,
-    ol,
-    h2,
-    h4,
-    h5,
-    h6 {
-      margin-left: 0;
-    }
-
-    h2 {
-      font-size: 1.5em;
-    }
+  h2 {
+    font-size: 1.5em;
   }
 }
