--- a/themes/pagedjs/layouts/partials/cropmarks.html
+++ b/themes/pagedjs/layouts/partials/cropmarks.html
@@ -1,4 +1,5 @@
 <div class="crop-marks">
     <div class="crop-mark vertical"></div>
     <div class="crop-mark horizontal"></div>
+    <div class="paper"></div>
 </div>
